Improve Firefox support

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GEXplorer</title>
     <meta name="description" content="My App description">
 
-    <base href="/gex/">
+    <base href="/">
 
     <link rel="icon" href="images/favicon.ico">
 
