--- a/src/elements/ami-viewer-2d.html
+++ b/src/elements/ami-viewer-2d.html
@@ -12,8 +12,11 @@
       }
 
       #container {
-        width: 100%;
-        height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        position: absolute;
         overflow: hidden;
       }
 
@@ -26,9 +29,15 @@
         width: 100%;
         height: 100%;
         overflow:hidden;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         pointer-events: none;
 
       }
@@ -48,13 +57,15 @@
 
       .information {
         font-size: 14px;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         max-width: 50%;
         color: var(--secondary-text-color);
       }
 
       .information > div {
-        text-overflow: ellipsis; 
+        -o-text-overflow: ellipsis;
+           text-overflow: ellipsis; 
         overflow: hidden;
         white-space: nowrap;
       }
@@ -78,7 +89,6 @@
         right: 0;
         text-align: right;
       }
-
     </style>
 
     <div id="overlay">
