--- a/src/elements/css-loader.html
+++ b/src/elements/css-loader.html
@@ -7,7 +7,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
   <template>
     <style>
         :host {
-          display: block;
+                display: block;
         }
 
         .contain {
@@ -22,7 +22,8 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         }
         svg ellipse {
         -webkit-transform-origin: center;
-                transform-origin: center;
+                -ms-transform-origin: center;
+            transform-origin: center;
         }
         svg:nth-of-type(1) ellipse {
         stroke: #F1725D;
@@ -137,66 +138,65 @@ https://codepen.io/jonitrythall/pen/dNJRRK
 
         @-webkit-keyframes jump {
         40% {
-            -webkit-transform: translateY(20px) scale(1.3);
-                    transform: translateY(20px) scale(1.3);
-            opacity: .9;
+                -webkit-transform: translateY(20px) scale(1.3);
+                        transform: translateY(20px) scale(1.3);
+                opacity: .9;
         }
         40% {
-            rx: 10px;
-            ry: 10px;
-            stroke-width: 3px;
+                rx: 10px;
+                ry: 10px;
+                stroke-width: 3px;
         }
         45% {
-            rx: 15px;
-            ry: 7px;
-            stroke-width: 4px;
+                rx: 15px;
+                ry: 7px;
+                stroke-width: 4px;
         }
         55% {
-            rx: 10px;
-            ry: 10px;
+                rx: 10px;
+                ry: 10px;
         }
         }
 
         @keyframes jump {
         40% {
-            -webkit-transform: translateY(20px) scale(1.3);
-                    transform: translateY(20px) scale(1.3);
-            opacity: .9;
+                -webkit-transform: translateY(20px) scale(1.3);
+                        transform: translateY(20px) scale(1.3);
+                opacity: .9;
         }
         40% {
-            rx: 10px;
-            ry: 10px;
-            stroke-width: 3px;
+                rx: 10px;
+                ry: 10px;
+                stroke-width: 3px;
         }
         45% {
-            rx: 15px;
-            ry: 7px;
-            stroke-width: 4px;
+                rx: 15px;
+                ry: 7px;
+                stroke-width: 4px;
         }
         55% {
-            rx: 10px;
-            ry: 10px;
+                rx: 10px;
+                ry: 10px;
         }
         }
         @-webkit-keyframes shadow {
         45% {
-            opacity: .15;
-            rx: 10px;
-            ry: 3px;
-            -webkit-transform: translateY(5px) scale(1.3);
-                    transform: translateY(5px) scale(1.3);
+                opacity: .15;
+                rx: 10px;
+                ry: 3px;
+                -webkit-transform: translateY(5px) scale(1.3);
+                        transform: translateY(5px) scale(1.3);
         }
         }
         @keyframes shadow {
         45% {
-            opacity: .15;
-            rx: 10px;
-            ry: 3px;
-            -webkit-transform: translateY(5px) scale(1.3);
-                    transform: translateY(5px) scale(1.3);
+                opacity: .15;
+                rx: 10px;
+                ry: 3px;
+                -webkit-transform: translateY(5px) scale(1.3);
+                        transform: translateY(5px) scale(1.3);
         }
         }
-
     </style>
 
     <div class='contain'>
