--- a/src/gex-view404.html
+++ b/src/gex-view404.html
@@ -25,7 +25,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script>
     class GEXView404 extends Polymer.Element {
-      static get is() { return 'gex-view404'; }
+      static get is() {
+        return 'gex-view404';
+      }
+
       static get properties() {
         return {
           // This shouldn't be neccessary, but the Analyzer isn't picking up
