--- a/src/pacs-pull/gex-pacs-error.html
+++ b/src/pacs-pull/gex-pacs-error.html
@@ -82,7 +82,7 @@
       }
 
       _openQuery() {
-        var pageEvent = new CustomEvent(
+        const pageEvent = new CustomEvent(
           'page', {detail: {
               page: 'query',
             },
